--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,12 @@
 						</div>
 						<div class="navbar-nav ms-auto">
 					</div>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+						<div class="navbar-nav">
+							<a class="nav-link" href="{% url 'indexAuthor' %}">See authors</a>
+						</div>
+						<div class="navbar-nav ms-auto">
+					</div>
 				</div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
