--- a/templates/indexAuthors.html
+++ b/templates/indexAuthors.html
@@ -5,7 +5,16 @@
 <div class="container">
     <h1>Authors</h1>
     <a href="{% url 'create-author' %}" class="btn btn-primary">Create New Author</a>
+
     <table class="table mt-4">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Country</th>
+                <th>Birthday</th>
+                <th>Description</th>
+            </tr>
+        </thead>
         <tbody>
             {% for author in authors %}
             <tr>
