--- a/templates/base.html
+++ b/templates/base.html
@@ -42,15 +42,11 @@
 			{% endblock %}
 		</div>
 
-	<!-- <footer class="text-center text-lg-start" style="position: fixed; left: 0; bottom: 0; width: 100%; background-color: rgb(246, 246, 246);">
-		<div class="text-center p-3">
-		&copy; 2023 AutoHaus
-		</div>
-  	</footer> -->
 	</body>
 	<script src="{% static '/js/base.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	{% block js_script %}
 	{% endblock %}
 </html>
