--- a/templates/book_sales_index.html
+++ b/templates/book_sales_index.html
@@ -7,15 +7,17 @@
     <table class="table mt-4">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>Year</th>
-                <th>Number of Sales</th>
+                <th>Sales</th>
             </tr>
         </thead>
         <tbody>
             {% for sale in sales %}
             <tr>
+                <td> {{ sale.pk}}</td>
                 <td>{{ sale.year }}</td>
-                <td>{{ sale.number_of_sales }}</td>
+                <td>{{ sale.sales }}</td>
                 <td>
                     <a href="{% url 'edit_sale' sale_id=sale.id %}" class="btn btn-info btn-sm">Edit</a>
                 </td>
