--- a/templates/indexAuthors.html
+++ b/templates/indexAuthors.html
@@ -34,7 +34,10 @@
     </table>
 </div>
     {% csrf_token %}
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'scripts/deleteauthor.js' %}"></script>
 
+
+{% endblock %}
+
+{% block js_script %}
+    <script src="{% static 'scripts/deleteauthor.js' %}"></script>
 {% endblock %}
