--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
 		</div>
 
 	</body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="{% static '/js/base.js' %}"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
