--- a/templates/authors.html
+++ b/templates/authors.html
@@ -19,7 +19,7 @@
             <tr>
                 <td>{{ author.name }}</td>
                 <td>{{ author.books_count }}</td>
-                <td>{{ author.country }}</td>
+                <td>{{ author.average_score }}</td>
                 <td>{{ author.total_sales }}</td>
             </tr>
             {% endfor %}
