feat: Top 50 best Sellers added

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 						<div class="navbar-nav">
 							<a class="nav-link" href="{% url 'top_10_rated' %}">Top 10 Books</a>
 						</div>
+						<div class="navbar-nav">
+							<a class="nav-link" href="{% url 'top_50_rated' %}">Top 50 Sellers</a>
+						</div>
 						<div class="navbar-nav ms-auto">
 							<a class="nav-link" href="{% url 'search_books' %}"> 
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
