fix: column name change

--- a/templates/topFiftyBooks.html
+++ b/templates/topFiftyBooks.html
@@ -12,7 +12,7 @@
                 <th>Publication Year</th>
                 <th>Total Sales</th>
                 <th>Author Total Sales</th>
-                <th>Best Seller on Publication</th>
+                <th>Top 5 on Publication</th>
             </tr>
         </thead>
         <tbody>
