--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,10 @@
 {% extends "base.html" %}
-<h1>hola</h1>
+{% block content %}
+    <div class="h-100 d-flex align-items-center justify-content-center" >
+        <h3>
+          Welcome,
+          <small class="text-muted">Book review app</small>
+        </h3>
+    </div>
+{% endblock %}
+
